<resources>
    <string name="app_name">Student Reminder</string>
    <string name="today">Today</string>
    <string name="upcoming">Upcoming</string>
    <string name="completed">Completed</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="mark_complete">Mark Complete</string>
    <string name="start_focus_mode">Start Focus Mode</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="stop_focus_mode">Stop Focus Mode</string>
</resources>